--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">tourapp</string>
+
+    <!-- LOGIN -->
+    <string name="acceder_login">Login</string>
+    <string name="recuerdame_login">Recuérdame</string>
+    <string name="password_login">Password</string>
+    <string name="user_login">User</string>
+    <string name="email_login">Email</string>
 </resources>
