--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="password_login">Password</string>
     <string name="user_login">User</string>
     <string name="email_login">Email</string>
+    <string name="name_register">Name</string>
 </resources>
