Sustituyo LoginFragment.kt por LaunchActivity.kt y añado BaseActivity.kt como base para otras actividades en el futuro.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="user_login">User</string>
     <string name="email_login">Email</string>
     <string name="name_register">Name</string>
+    <string name="title_error_login">Error en los datos introducidos</string>
+    <string name="reintentar">Reintentar</string>
+
+    <string name="ob_campo">Campo obligatorio</string>
+
 </resources>
