+Creo tema nuevo sin barra +Desde LoginActivity.kt accedo a RegisterActivity.kt modi: Traduzco texto al español +Agrego boton flecha para volver a LoginActivity.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,8 @@
     <string name="name_register">Name</string>
     <string name="title_error_login">Error en los datos introducidos</string>
     <string name="reintentar">Reintentar</string>
+    <string name="registrate">¿No tienes cuenta todavía? Crea una</string>
+    <string name="registrateEn">No account yet? Create one</string>
 
     <string name="ob_campo">Campo obligatorio</string>
 
