--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,7 @@
     <string name="navigation_drawer_open">Abrir menú lateral</string>
     <string name="navigation_drawer_close">Cerrar menú lateral</string>
 
+    <string name="btn_cerrar">Cerrar</string>
+    <string name="btn_aceptar">Aceptar</string>
+
 </resources>
