--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,8 @@
     <string name="btn_crear_cuenta">Crear cuenta</string>
 
     <string name="ob_campo">Campo obligatorio</string>
+    <string name="max_length">El contenido debe de ser de almenos</string>
+    <string name="shame_pass">Las contraseñas deben coincidir</string>
 
     <!--Menu desplegable-->
     <string name="logout_menu">Cerrar sesión</string>
