Puedo volver a UserDataFragment.kt desde EditUserFragment.kt con onBackPressed()

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,5 +37,7 @@
 
     <!--Edit user fragment-->
     <string name="btn_edit_data">Editar datos usuario</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
