--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -38,6 +38,9 @@
     <string name="place_btn_rate_txt">Puntuar</string>
     <string name="place_btn_comment_txt">Comentarios</string>
 
+    <!--Comment List fragment-->
+    <string name="comment_txt_hint">Escribe un comentario</string>
+
     <!--User data fragment-->
     <string name="user_data_name">Nombre:</string>
     <string name="user_data_email">Email:</string>
@@ -48,6 +51,10 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
+    <!--Comentario item menu-->
+    <string name="editcomment_menu">Editar comentario</string>
+    <string name="editcomment_btn">Editar</string>
+    <string name="deletecomment_menu">Eliminar comentario</string>
 
 
     <!--LORE IPSUM TEST-->
