Mapa funciona correctamente, aun falta añadir cosas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,6 +49,7 @@
     <string name="editcomment_menu">Editar comentario</string>
     <string name="editcomment_btn">Editar</string>
     <string name="deletecomment_menu">Eliminar comentario</string>
+    <string name="title_activity_maps245">Map</string>
 
 
     <!--LORE IPSUM TEST-->
