--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,9 @@
     <string name="del_account_msg">¿Desea eliminar su cuenta? Una vez hecho tendrá que crear
         una nueva para acceder a los servicios de la aplicación.</string>
 
+    <!--Eliminar usuario (COMO ADMIN)-->
+    <string name="del_accountusr_msg">¿Desea eliminar la cuenta de este usuario?</string>
+
     <string name="btn_cancelar">Cancelar</string>
     <string name="btn_aceptar">Aceptar</string>
 
@@ -80,6 +83,7 @@
     <string name="cambiar_nombre_lista_lugares">Cambiar nombre</string>
     <string name="hint_change_list_name">Introduce nombre</string>
     <string name="delete_list_item">Eliminar elemento</string>
+    <string name="delete_list_item_msg">¿Desea eliminar esta lista?</string>
 
 
     <string name="editcomment_search_location">Introduce Dirección, Ciudad o Código Postal</string>
